tests/baselines/reference/declFileConstructors.errors.txt
declFileConstructors_0.ts(17,9): error TS2322: Type 'string' is not assignable to type 'ConstructorWithRestParamters'.
declFileConstructors_0.ts(17,9): error TS2409: Return type of constructor signature must be assignable to the instance type of the class.
declFileConstructors_1.ts(17,9): error TS2322: Type 'string' is not assignable to type 'GlobalConstructorWithRestParamters'.
declFileConstructors_1.ts(17,9): error TS2409: Return type of constructor signature must be assignable to the instance type of the class.


==== declFileConstructors_0.ts (2 errors) ====
    export class SimpleConstructor {
        /** This comment should appear for foo*/
        constructor() {
        }
    }
    export class ConstructorWithParameters {
        /** This is comment for function signature*/
        constructor(/** this is comment about a*/a: string,
            /** this is comment for b*/
            b: number) {
            var d = a;
        }
    }
    
    export class ConstructorWithRestParamters {
        constructor(a: string, ...rests: string[]) {
            return a + rests.join("");
            ~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'ConstructorWithRestParamters'.
            ~~~~~~
!!! error TS2409: Return type of constructor signature must be assignable to the instance type of the class.
        }
    }
    
    export class ConstructorWithOverloads {
        constructor(a: string);
        constructor(a: number);
        constructor(a: any) {
        }
    }
    
    export class ConstructorWithPublicParameterProperty {
        constructor(public x: string) {
        }
    }
    
    export class ConstructorWithPrivateParameterProperty {
        constructor(private x: string) {
        }
    }
    
    export class ConstructorWithOptionalParameterProperty {
        constructor(public x?: string) {
        }
    }
    
    export class ConstructorWithParameterInitializer {
        constructor(public x = "hello") {
        }
    }
    
==== declFileConstructors_1.ts (2 errors) ====
    class GlobalSimpleConstructor {
        /** This comment should appear for foo*/
        constructor() {
        }
    }
    class GlobalConstructorWithParameters {
        /** This is comment for function signature*/
        constructor(/** this is comment about a*/a: string,
            /** this is comment for b*/
            b: number) {
            var d = a;
        }
    }
    
    class GlobalConstructorWithRestParamters {
        constructor(a: string, ...rests: string[]) {
            return a + rests.join("");
            ~~~~~~
!!! error TS2322: Type 'string' is not assignable to type 'GlobalConstructorWithRestParamters'.
            ~~~~~~
!!! error TS2409: Return type of constructor signature must be assignable to the instance type of the class.
        }
    }
    
    class GlobalConstructorWithOverloads {
        constructor(a: string);
        constructor(a: number);
        constructor(a: any) {
        }
    }
    
    class GlobalConstructorWithPublicParameterProperty {
        constructor(public x: string) {
        }
    }
    
    class GlobalConstructorWithPrivateParameterProperty {
        constructor(private x: string) {
        }
    }
    
    class GlobalConstructorWithOptionalParameterProperty {
        constructor(public x?: string) {
        }
    }
    
    class GlobalConstructorWithParameterInitializer {
        constructor(public x = "hello") {
        }
    }